Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58920

Crash when dragging an item over WebEngineView

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.0 Beta 2
    • 5.7.1, 5.8.0
    • None
    • Windows only, tested on Qt 5.7.1 and 5.8.0
    • 37206c2baf013b07cd26d416a8ab0db493d7d651

    Description

      Application crashes when you drag an item over WebEngineView. Note that WebEngineView does not have to be a drop target, just dragging an item over it will cause the crash. There's QML scene example attached. This can be also reproduced on the official Drag&Drop examples, just add WebEngineView somewhere on the scene and drag over it.

      The crash log:

      Program: C:\Qt\Qt5.8.0\5.8\msvc2015\bin\Qt5Cored.dll
      Module: 5.8.0
      File: global\qglobal.cpp
      Line: 3070
      
      ASSERT: "!inEvent" in file items\qquickdrag.cpp, line 240 <Unknown File>: QML QQuickDragAttached: active cannot be changed from within a drag event handler
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jbornema Joerg Bornemann
              slukovic Srdan Lukovic
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes